# search_engine_optimization

./: .gitignore  README.md  add_search_result.py  app.py  config.py  pyproject.toml
database/models/: connect_db.py  create_tables.py  evaluation_data.py  models.py  search_result.py
database/repository/: query_intent_repository.py  search_results_repository.py
gpt_model/: gpt_35_model.py
notebooks/: cleaning_data.ipynb
notebooks/cleaned_data/: df_clean.csv
scraper/: scraper.py  scraper_bing.py  scraper_google.py
scraper/data_preprocessing/: text_processing.py
search_fastapi/: main.py  scraper_orchestrator.py  service.py
